all tests done for sqllite storage + storaged subject

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,5 @@ testpaths =
   krules_core/subject/tests/test_storaged_subject.py
   krules_core/subject/tests/sqlite_storage/test_sqlitestorage_inmemory.py
   krules_core/subject/tests/test_storage.py
-  #krules_core/subject/tests/test_subject.py
-  krules_core/test_core.py
+  krules_core/subject/tests/test_storaged_subject.py
+  krules_core/tests/test_core.py
