--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,12 @@ testpaths =
   krules_core/tests/subject/test_storaged_subject.py
   krules_core/tests/base_functions/test_filters.py
   krules_core/tests/base_functions/test_processing.py
+  krules_core/tests/base_functions/test_misc.py
   krules_core/tests/subject/sqlite_storage/test_sqlitestorage_inmemory.py
   krules_core/tests/subject/test_storage.py
   krules_core/tests/subject/test_storaged_subject.py
   krules_core/tests/base_functions/test_filters.py
   krules_core/tests/base_functions/test_processing.py
+  krules_core/tests/base_functions/test_misc.py
 
 
