#KRUL-20 arg processors working

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,17 +4,17 @@ testpaths =
   krules_core/tests/test_router.py
   krules_core/tests/test_core.py
   krules_core/tests/test_argprocessors.py
-;  krules_core/tests/subject/sqlite_storage/test_sqlitestorage_onfile.py
-;  krules_core/tests/subject/test_storage.py
-;  krules_core/tests/subject/test_storaged_subject.py
-;  krules_core/tests/base_functions/test_filters.py
-;  krules_core/tests/base_functions/test_processing.py
-;  krules_core/tests/base_functions/test_misc.py
-;  krules_core/tests/subject/sqlite_storage/test_sqlitestorage_inmemory.py
-;  krules_core/tests/subject/test_storage.py
-;  krules_core/tests/subject/test_storaged_subject.py
-;  krules_core/tests/base_functions/test_filters.py
-;  krules_core/tests/base_functions/test_processing.py
-;  krules_core/tests/base_functions/test_misc.py
+  krules_core/tests/subject/sqlite_storage/test_sqlitestorage_onfile.py
+  krules_core/tests/subject/test_storage.py
+  krules_core/tests/subject/test_storaged_subject.py
+  krules_core/tests/base_functions/test_filters.py
+  krules_core/tests/base_functions/test_processing.py
+  krules_core/tests/base_functions/test_misc.py
+  krules_core/tests/subject/sqlite_storage/test_sqlitestorage_inmemory.py
+  krules_core/tests/subject/test_storage.py
+  krules_core/tests/subject/test_storaged_subject.py
+  krules_core/tests/base_functions/test_filters.py
+  krules_core/tests/base_functions/test_processing.py
+  krules_core/tests/base_functions/test_misc.py
 
 
