replace type structured with binary and fix dev building

--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -1,15 +1,10 @@
 FROM rulesset-image-base-setup
 
-ADD ./.krules-public /app/.krules-libs
+ADD ./.krules-libs /krules-libs
 
-RUN pip install -r /app/.krules-libs/krules-requirements.txt
-WORKDIR /app/.krules-libs/krules-core
-RUN python setup.py develop --no-deps
-
-WORKDIR /app/.krules-libs/krules-dispatcher-cloudevents
-RUN python setup.py develop --no-deps
-
-WORKDIR /app/.krules-libs/krules-env
-RUN python setup.py develop --no-deps
+RUN pip install -r /krules-libs/krules-requirements.txt
+RUN cd /krules-libs/krules-core && python setup.py develop --no-deps
+RUN cd /krules-libs/krules-dispatcher-cloudevents && python setup.py develop --no-deps
+RUN cd /krules-libs/krules-env && python setup.py develop --no-deps
 
 CMD exec gunicorn --bind :8080 --workers 1 --threads 8 main:app
