--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -8,4 +8,6 @@ RUN cd /krules-libs/krules-core && python3 setup.py develop
 RUN cd /krules-libs/krules-dispatcher-cloudevents && python3 setup.py develop --no-deps
 RUN cd /krules-libs/krules-env && python3 setup.py develop --no-deps
 
+ENV PYTHONPATH /app:/krules-libs
+
 CMD exec gunicorn --bind :8080 --workers 1 --threads 8 main:app
