--- a/k8s/serviceaccount.yaml
+++ b/k8s/serviceaccount.yaml
@@ -4,11 +4,11 @@ metadata:
   name: krules-watcher-serviceaccount
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: krules-watch-resources
 rules:
-- apiGroups: ["*"]
+- apiGroups: [""]
   resources:
     - namespaces
   verbs:
@@ -16,7 +16,7 @@ rules:
     - get
     - watch
 ---
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: krules-watcher
@@ -24,7 +24,7 @@ subjects:
 - kind: ServiceAccount
   name: krules-watcher-serviceaccount
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: krules-watch-resources
   apiGroup: rbac.authorization.k8s.io
 ---
