--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ testpaths =
   krules_core/tests/test_router.py
   krules_core/tests/test_core.py
   krules_core/tests/test_argprocessors.py
+  krules_core/tests/subject/test_empty_storage.py
   krules_core/tests/subject/sqlite_storage/test_sqlitestorage_onfile.py
   krules_core/tests/subject/test_storage.py
   krules_core/tests/subject/test_storaged_subject.py
