--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,4 @@
 testpaths =
     k8s_subjects_storage/test_storage.py
     k8s_subjects_storage/test_with_subject.py
+    k8s_functions/test_functions.py
