--- a/rulesets/apiserversource-subscriber/k8s/apiserversource.yaml
+++ b/rulesets/apiserversource-subscriber/k8s/apiserversource.yaml
@@ -9,15 +9,13 @@ spec:
     - apiVersion: v1
       kind: Namespace
       labelSelector:
-        matchLabels:
-          krules.airspot.dev/injection: enabled
-
+        matchExpressions:
+          - {key: krules.airspot.dev/injection, operator: In, values: [enabled, disabled]}
+#        matchLabels:
+#          krules.airspot.dev/injection: enabled
   sink:
     ref:
-#      apiVersion: eventing.knative.dev/v1
-#      kind: Broker
-#      name: k8s-events
-      apiVersion: serving.knative.dev/v1
+      apiVersion: v1
       kind: Service
-      name: krules-ns-sugar
+      name: apiserversource-subscriber
 ---
