--- a/base/k8s/serviceaccounts.yaml
+++ b/base/k8s/serviceaccounts.yaml
@@ -49,6 +49,9 @@ rules:
     - get
     - create
     - delete
+    - watch
+    - update
+    - patch
 - apiGroups: [""]
   resources:
     - events
