--- a/rulesets/configurations-helper/Dockerfile
+++ b/rulesets/configurations-helper/Dockerfile
@@ -1,3 +1,4 @@
-FROM ade8850/krules-system-base@sha256:152e56c051b1bdc3db4e67f800f78b2ddfa37043516a456598714663cb131f6f
+FROM ade8850/krules-system-base@sha256:abf25f833ad4acc0b927bd0f01121b250d53b46851e59e884c5c685db7c260c9
 
+ADD functions/ /app/functions/
 ADD ruleset.py /app/ruleset.py
