add mongo config file

--- a/base/k8s/kustomization.yaml
+++ b/base/k8s/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
 - serviceaccount.yaml
 - brokers.yaml
-# - redis-credentials.yaml
+# - config-krules-subjects-redis.yaml
+# - config-krules-subjects-mongodb.yaml
 
