--- a/base/k8s/config-krules-subjects-redis.yaml
+++ b/base/k8s/config-krules-subjects-redis.yaml
@@ -5,11 +5,10 @@ metadata:
 spec:
   key: subjects-backends.redis
   appliesTo:
-    krules.airspot.dev/type:
-      - ruleset
+    krules.airspot.dev/type: ruleset
   data:
     url: redis://:$REDIS_AUTH@$REDIS_HOST:6379/0
-    key_prefix: $REDIS_SUBJECT_KEY_PREFIX
+    key_prefix: my-app
   container:
     envFrom:
       - secretRef:
