--- a/rulesets/apiserversource-subscriber/Makefile
+++ b/rulesets/apiserversource-subscriber/Makefile
@@ -1,6 +1,10 @@
 SHELL=/bin/bash
-TARGET_IMAGE:=${DOCKER_REGISTRY}/apiserversource-subscriber
+WORKING_TARGET_IMAGE:=${DOCKER_REGISTRY}/apiserversource-subscriber
 NAMESPACE:=krules-system
+BASE_RELEASE_TARGET_IMAGE=gcr.io/airspot/apiserversource-subscriber
+RELEASE_TARGET_IMAGE_VERSION=0.8
+RELEASE_TARGET_IMAGE:=${BASE_RELEASE_TARGET_IMAGE}:${RELEASE_TARGET_IMAGE_VERSION}
+
 
 all: build push resources
 
@@ -8,12 +12,20 @@ resources:
 	kubectl apply -n ${NAMESPACE} -k k8s
 
 build: check-env
-	docker build -t ${TARGET_IMAGE} .
+	docker build -t ${WORKING_TARGET_IMAGE} .
 
 push: check-env
-	docker push ${TARGET_IMAGE}
-	docker inspect --format='{{index .RepoDigests 0}}' ${TARGET_IMAGE} >.digest
+	docker push ${WORKING_TARGET_IMAGE}
+	docker inspect --format='{{index .RepoDigests 0}}' ${WORKING_TARGET_IMAGE} >.digest
 	sed -i "s%image: .*%image: $(shell cat .digest)%" k8s/service.yaml
+
+release: build
+	docker tag ${WORKING_TARGET_IMAGE} ${RELEASE_TARGET_IMAGE}
+	docker tag ${RELEASE_TARGET_IMAGE} ${BASE_RELEASE_TARGET_IMAGE}:latest
+	sed -i "s%image: .*%image: ${RELEASE_TARGET_IMAGE}%" k8s/service.yaml
+	docker push ${RELEASE_TARGET_IMAGE}
+	docker push ${BASE_RELEASE_TARGET_IMAGE}:latest
+
 
 check-env:
 ifndef DOCKER_REGISTRY
