--- a/rulesets/krules-ns-injector/Dockerfile
+++ b/rulesets/krules-ns-injector/Dockerfile
@@ -1,3 +1,3 @@
-FROM ade8850/krules-system-base@sha256:1d40e60a9513509bd2749cad22ba75a32bfc444a23a87cf3f3f4d1f32f9b0295
+FROM gcr.io/airspot/krules-system-base:0.8
 
 ADD ruleset.py /app/ruleset.py
