--- a/rulesets/apiserversource-subscriber/k8s/service.yaml
+++ b/rulesets/apiserversource-subscriber/k8s/service.yaml
@@ -14,11 +14,11 @@ spec:
       serviceAccountName: krules-controller
       containers:
       - name: ruleset
-        image: gcr.io/airspot/apiserversource-subscriber:0.8
+        image: gcr.io/airspot/apiserversource-subscriber:0.8.1
         # for development only
-        env:
-          - name: K_PROCEVENTS_SINK
-            value: http://broker-ingress.knative-eventing.svc.cluster.local/krules-system/procevents
+#        env:
+#          - name: K_PROCEVENTS_SINK
+#            value: http://broker-ingress.knative-eventing.svc.cluster.local/krules-system/procevents
 ---
 apiVersion: sources.knative.dev/v1beta1
 kind: SinkBinding
