--- a/base/k8s/config-krules-subjects-redis.yaml
+++ b/base/k8s/config-krules-subjects-redis.yaml
@@ -8,7 +8,7 @@ spec:
     krules.airspot.dev/type: ruleset
   data:
     url: redis://:$REDIS_AUTH@$REDIS_HOST:6379/0
-    key_prefix: my-app
+    key_prefix: my-app  # used to avoid key name confilicts when multiple project share the same database
   container:
     envFrom:
       - secretRef:
