--- a/base/k8s/config-krules-subjects-mongodb.yaml
+++ b/base/k8s/config-krules-subjects-mongodb.yaml
@@ -7,6 +7,8 @@ spec:
   appliesTo:
     krules.airspot.dev/type: ruleset
   data:
+    # python client *args and **kwargs 
+    # https://pymongo.readthedocs.io/en/stable/api/pymongo/mongo_client.html
     client_args:
       - mongodb.address
     client_kwargs:
@@ -15,7 +17,7 @@ spec:
       password: $KRULES_SUBJECTS_MONGODB_PASSWORD
     database: database
     collection: subjects
-    use_atomic_ops_collection: false
+    # use_atomic_ops_collection: false
   container:
     envFrom:
       - secretRef:
