--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,42 @@
 [submodule "Starting material/krules-project-template"]
 	path = Starting material/krules-project-template
 	url = https://github.com/airspot-dev/krules-project-template
+[submodule "Core libraries/krules-core"]
+	path = Core libraries/krules-core
+	url = https://github.com/airspot-dev/krules-core
+[submodule "Core libraries/krules-dispatcher-cloudevents"]
+	path = Core libraries/krules-dispatcher-cloudevents
+	url = https://github.com/airspot-dev/krules-dispatcher-cloudevents
+[submodule "Core libraries/krules-env"]
+	path = Core libraries/krules-env
+	url = https://github.com/airspot-dev/krules-env
+[submodule "Core libraries/krules-controllers"]
+	path = Core libraries/krules-controllers
+	url = https://github.com/airspot-dev/krules-controllers
+[submodule "Subjects storage/krules-subjects-storage-redis"]
+	path = Subjects storage/krules-subjects-storage-redis
+	url = https://github.com/airspot-dev/krules-subjects-storage-redis
+[submodule "Subjects storage/krules-subjects-storage-mongodb"]
+	path = Subjects storage/krules-subjects-storage-mongodb
+	url = https://github.com/airspot-dev/krules-subjects-storage-mongodb
+[submodule "Subjects storage/krules-subjects-storage-k8s"]
+	path = Subjects storage/krules-subjects-storage-k8s
+	url = https://github.com/airspot-dev/krules-subjects-storage-k8s
+[submodule "Miscellaneous/rulesset-image-base"]
+	path = Miscellaneous/rulesset-image-base
+	url = https://github.com/airspot-dev/rulesset-image-base
+[submodule "Miscellaneous/django-krules-scheduler"]
+	path = Miscellaneous/django-krules-scheduler
+	url = https://github.com/airspot-dev/django-krules-scheduler
+[submodule "Miscellaneous/django-signals-cloudevents"]
+	path = Miscellaneous/django-signals-cloudevents
+	url = https://github.com/airspot-dev/django-signals-cloudevents
+[submodule "Miscellaneous/django-krules-procevents"]
+	path = Miscellaneous/django-krules-procevents
+	url = https://github.com/airspot-dev/django-krules-procevents
+[submodule "Code examples/iot-demo"]
+	path = Code examples/iot-demo
+	url = https://github.com/airspot-dev/iot-demo
+[submodule "Code examples/knative-bluegreen-demo"]
+	path = Code examples/knative-bluegreen-demo
+	url = https://github.com/airspot-dev/knative-bluegreen-demo
