--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -5,6 +5,7 @@ ADD ./requirements.txt /krules-libs
 
 RUN pip install -r /krules-libs/requirements.txt
 RUN cd /krules-libs/krules-dispatcher-cloudevents && python3 setup.py develop
+RUN cd /krules-libs/krules-flask-env && python3 setup.py develop
 RUN cd /krules-libs/krules-env && python3 setup.py develop
 RUN cd /krules-libs/krules-subjects-k8s-storage && python3 setup.py develop
 RUN cd /krules-libs/krules-core && python3 setup.py develop
