- webhook procevents working - webhook certs managed by jettech/kube-webhook-certgen

--- a/adminssion-webhooks/webhook/Dockerfile.service
+++ b/adminssion-webhooks/webhook/Dockerfile.service
@@ -1,7 +1,6 @@
 FROM alpine:3.11.6
-MAINTAINER Airspot <info@airspot.tech>
 
-ADD /app /app
+ADD /app/requirements.txt /app/requirements.txt
 
 RUN apk add --no-cache --virtual .build-deps g++ python3-dev && \
     apk add --no-cache build-base && \
@@ -10,15 +9,13 @@ RUN apk add --no-cache --virtual .build-deps g++ python3-dev && \
     pip3 install --no-cache-dir -r /app/requirements.txt && \
     apk del .build-deps
 
-#RUN pip3 install gunicorn krules-env krules-subjects-storage-redis
-## missing from krules-env
-#RUN pip3 install pyyaml json_logging flask
-## missing from krules-dispatcher
-#RUN pip3 install pytz requests
-
+ADD /app /app
 
 ENV PYTHONPATH /app
 ENV FLASK_APP /app/main.py
 ENV FLASK_ENV production
 
-CMD exec gunicorn --bind :8080 --workers 1 --threads 8 main:app
+CMD exec gunicorn \
+    --certfile /run/secrets/tls/cert --keyfile /run/secrets/tls/key \
+    --bind :8443 \
+    --workers 1 --threads 8 main:app
