--- a/helper/Makefile
+++ b/helper/Makefile
@@ -1,13 +1,10 @@
 SHELL=/bin/bash
-SERVICE_NAME=krules-webhook
+SERVICE_NAME=krules-helper
 NAMESPACE=krules-system-dev
 WORKING_TARGET_IMAGE:=${DOCKER_REGISTRY}/${SERVICE_NAME}
-WORKING_TARGET_IMAGE_GENCERT:=${DOCKER_REGISTRY}/${SERVICE_NAME}-gencert
 BASE_RELEASE_TARGET_IMAGE=gcr.io/airspot/${SERVICE_NAME}
-BASE_RELEASE_TARGET_IMAGE_GENCERT=gcr.io/airspot/${SERVICE_NAME}-gencert
 RELEASE_TARGET_IMAGE_VERSION=0.9
 RELEASE_TARGET_IMAGE:=${BASE_RELEASE_TARGET_IMAGE}:${RELEASE_TARGET_IMAGE_VERSION}
-BASE_RELEASE_TARGET_IMAGE_GENCERT:=${BASE_RELEASE_TARGET_IMAGE_GENCERT}:${RELEASE_TARGET_IMAGE_VERSION}
 
 all: build push
 
@@ -19,26 +16,10 @@ service:
 		k8s/service.yaml.j2  -o k8s/service.yaml
 	kubectl apply -f k8s/service.yaml
 
-webhook:
-	jinja2 \
-		-D name=${SERVICE_NAME} \
-		-D namespace=${NAMESPACE} \
-		k8s/admissionconfig.yaml.j2 -o k8s/admissionconfig.yaml
-	kubectl apply -f k8s/admissionconfig.yaml
-	jinja2 \
-		-D name=${SERVICE_NAME} \
-		-D namespace=${NAMESPACE} \
-		-D digest=$(shell cat .digest-gencert) \
-		k8s/gencert.yaml.j2  -o k8s/gencert.yaml
-	kubectl apply -f k8s/gencert.yaml
-
-
-
-#update:
-#	kn service update ${SERVICE_NAME} --image=$(shell cat .digest)
-
 build: check-env
-	docker build -t ${WORKING_TARGET_IMAGE} -f Dockerfile.service .
+	rm -rf .common
+	rsync -rv ../common/ .common/
+	docker build -t ${WORKING_TARGET_IMAGE} .
 
 
 push: check-env
