ruleset-image-base extend README

--- a/image-bases/ruleset-image-base/Makefile
+++ b/image-bases/ruleset-image-base/Makefile
@@ -1,15 +1,13 @@
-VERSION=`cat VERSION`
-NOW=$(shell date +%Y%m%d%H%M%S)
-DEV_VERSION=${VERSION}-${NOW}
+release: check_release_env common app/*.py release/Dockerfile
+	docker build -t ruleset-image-base:${RELEASE_VERSION} -t ${DOCKER_REGISTRY}/ruleset-image-base:${VERSION} \
+	-t ${DOCKER_REGISTRY}/ruleset-image-base:latest public &&
+	docker push ${DOCKER_REGISTRY}/ruleset-image-base:${RELEASE_VERSION} && docker push ${DOCKER_REGISTRY}/ruleset-image-base:latest
 
-release: check_env common app/*.py release/Dockerfile
-	docker build -t ruleset-image-base:${VERSION} -t ${DOCKER_REGISTRY}/ruleset-image-base:${VERSION} -t ${DOCKER_REGISTRY}/ruleset-image-base:latest public
-	docker push ${DOCKER_REGISTRY}/ruleset-image-base:${VERSION} && docker push ${DOCKER_REGISTRY}/ruleset-image-base:latest
-
-develop: check_env check_dev_env common app/*.py release/Dockerfile
-	cp -rf ${KRULES_DEV_PACKAGES_DIR} ./develop/.krules-libs/
-	docker build -t ruleset-image-base:${DEV_VERSION} -t ${DOCKER_REGISTRY}/ruleset-image-base:${DEV_VERSION} develop && \
-	docker push ${DOCKER_REGISTRY}/ruleset-image-base:${DEV_VERSION}
+develop: check_env common app/*.py develop/Dockerfile
+	rsync ../libs/* ./develop/.krules-libs/
+	docker build -t ${DOCKER_REGISTRY}/ruleset-image-base develop && \
+	docker push ${DOCKER_REGISTRY}/ruleset-image-base && \
+	docker inspect --format='{{index .RepoDigests 0}}' ruleset-image-base > .digest
 	rm -rf ./develop/.krules-libs
 
 common: Dockerfile
@@ -20,7 +18,7 @@ ifndef DOCKER_REGISTRY
 	$(error DOCKER_REGISTRY is undefined)
 endif
 
-check_dev_env:
-ifndef KRULES_DEV_PACKAGES_DIR
-	$(error KRULES_DEV_PACKAGES_DIR is undefined)
+check_release_env: check_env
+ifndef RELEASE_VERSION
+	$(error RELEASE_VERSION is undefined)
 endif
