--- a/helper/Dockerfile
+++ b/helper/Dockerfile
@@ -1,4 +1,5 @@
-FROM gcr.io/airspot/ruleset-image-base:0.8.5.4
+#FROM gcr.io/airspot/ruleset-image-base:0.8.5.4
+FROM lorenzocampo/ruleset-image-base@sha256:9af52e763737537f5e32a0c7280f5cd20a1a578aa40a2617bc7e419ae675c78b
 
 ADD /app /app
 ADD .common /app
