--- a/images/ruleset-image-base/Makefile
+++ b/images/ruleset-image-base/Makefile
@@ -1,5 +1,5 @@
 release: check_release_env common app/*.py release/Dockerfile
-	docker build -t ruleset-image-base:${RELEASE_VERSION} -t ${DOCKER_REGISTRY}/ruleset-image-base:${VERSION} \
+	docker build -t ruleset-image-base:${RELEASE_VERSION} -t ${DOCKER_REGISTRY}/krules-ruleset-image-base:${VERSION} \
 	-t ${DOCKER_REGISTRY}/ruleset-image-base:latest public &&
 	docker push ${DOCKER_REGISTRY}/ruleset-image-base:${RELEASE_VERSION} && docker push ${DOCKER_REGISTRY}/ruleset-image-base:latest
 
@@ -7,7 +7,7 @@ develop: check_env common app/*.py develop/Dockerfile
 	rsync -r ../../libs/* ./develop/.krules-libs/
 	docker build -t ${DOCKER_REGISTRY}/ruleset-image-base develop && \
 	docker push ${DOCKER_REGISTRY}/ruleset-image-base && \
-	docker inspect --format='{{index .RepoDigests 0}}' ${DOCKER_REGISTRY}/ruleset-image-base > .digest
+	docker inspect --format='{{index .RepoDigests 0}}' ${DOCKER_REGISTRY}/krules-ruleset-image-base > .digest
 	rm -rf ./develop/.krules-libs
 
 common: Dockerfile
