--- a/images/django-image-base/requirements.txt
+++ b/images/django-image-base/requirements.txt
@@ -2,7 +2,7 @@ Django==3.2.3
 django-signals-cloudevents==0.1.4
 whitenoise==5.2.0
 #django-prettyjson==0.4.1
-djangorestframework==3.12.4
+#djangorestframework==3.12.4
 #django-jsoneditor==0.1.6
 channels==3.0.3
-djangochannelsrestframework==0.2.2
+#djangochannelsrestframework==0.2.2
