refactored and improved deployment system

--- a/dashboard/.env
+++ b/dashboard/.env
@@ -1,5 +1,7 @@
 APP_NAME="dashboard"
-K_SINK="django-orm"
+IMAGE_NAME="krules-${APP_NAME}"
+CONFIGURATION_KEY="${APP_NAME}"
+SITE_NAME="sitebase"
 SERVICE_API="knative"
 ENABLE_DJANGOAPP_PROCEVENTS="1"
 ENABLE_DJANGOAPP_SCHEDULER="0"
