--- a/images/django-image-base/.env
+++ b/images/django-image-base/.env
@@ -1,4 +1,7 @@
 APP_NAME="django"
+IMAGE_NAME="krules-django-image-base"
+SITE_NAME="basesite"
+CONFIGURATION_KEY="django"
 DJANGO_BACKEND_POSTGRES=1
 DJANGO_BACKEND_MYSQL=1
 SUPPORTS_REDIS=1
