code hash in ruleset template

--- a/templates/project/base/k8s/config-krules-subjects-redis.yaml.j2.example
+++ b/templates/project/base/k8s/config-krules-subjects-redis.yaml.j2.example
@@ -6,14 +6,15 @@ metadata:
 spec:
   key: subjects-backends.redis
   appliesTo:
-    config.krules.airspot.dev/redis-backend: inject
+    krules.airspot.dev/type:
+      - ruleset
   data:
     url: redis://:$REDIS_AUTH@redis:6379/1
     key_prefix: {{ app_name }}
   container:
     env:
-    - name: $REDIS_AUTH
+    - name: REDIS_AUTH
       valueFrom:
-        secretKeytRef:
+        secretKeyRef:
           name: redis-auth
           key: auth-string
