finalized django images

--- a/images/django-image-base/.env
+++ b/images/django-image-base/.env
@@ -1,6 +1,6 @@
 APP_NAME="django"
 IMAGE_NAME="krules-django-image-base"
-SITE_NAME="basesite"
+SITE_NAME="djsite"
 CONFIGURATION_KEY="django"
 DJANGO_BACKEND_POSTGRES=1
 DJANGO_BACKEND_MYSQL=1
