--- a/dashboard/.env
+++ b/dashboard/.env
@@ -1,7 +1,7 @@
 APP_NAME="dashboard"
 IMAGE_NAME="krules-${APP_NAME}"
-CONFIGURATION_KEY="${APP_NAME}"
-SITE_NAME="sitebase"
+CONFIGURATION_KEY="django"
+SITE_NAME="djsite"
 SERVICE_API="knative"
 ENABLE_DJANGOAPP_PROCEVENTS="1"
 ENABLE_DJANGOAPP_SCHEDULER="1"
