--- a/images/dashboard-image-base/.env
+++ b/images/dashboard-image-base/.env
@@ -1,5 +1,5 @@
 APP_NAME="dashboard"
 IMAGE_NAME="krules-dashboard-image-base"
-CONFIGURATION_KEY="${APP_NAME}"
-SITE_NAME="sitebase"
+CONFIGURATION_KEY="django"
+SITE_NAME="djsite"
 SERVICE_API="knative"
