minor installation fixed

--- a/dashboard/rulesets/scheduler/.env
+++ b/dashboard/rulesets/scheduler/.env
@@ -1,7 +1,7 @@
-APP_NAME="dashboard-scheduler"
+APP_NAME="django-scheduler"
 IMAGE_NAME="krules-${APP_NAME}"
-SITE_NAME="basesite"
-CONFIGURATION_KEY="dashboard"
+SITE_NAME="djsite"
+CONFIGURATION_KEY="django"
 DJANGO_BACKEND_POSTGRES=1
 DJANGO_BACKEND_MYSQL=1
 SUPPORTS_REDIS=1
