--- a/controllers/Pipfile
+++ b/controllers/Pipfile
@@ -4,10 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-jinja2 = "*"
-sane-build = "*"
-python-dotenv = "*"
-pyyaml = "*"
+krules-dev-support = "*"
 
 [dev-packages]
 
