--- a/templates/project/base/k8s/config-krules-subjects-redis.yaml.j2.example
+++ b/templates/project/base/k8s/config-krules-subjects-redis.yaml.j2.example
@@ -8,6 +8,7 @@ spec:
   appliesTo:
     krules.airspot.dev/type:
       - ruleset
+      - generic
   data:
     url: redis://:$REDIS_AUTH@redis:6379/1
     key_prefix: {{ app_name }}
