--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ name = "pypi"
 krules-dev-support = {editable = true, path = "./dev_support/krules-dev-support"}
 twine = "*"
 dependency-injector = "==4.32.2"
+django = "*"
+django-signals-cloudevents = "*"
 
 [requires]
 python_version = "3.8"
