django template [initial]

--- a/templates/django/k8s/config-django-database.yaml.j2.example
+++ b/templates/django/k8s/config-django-database.yaml.j2.example
@@ -10,19 +10,29 @@ spec:
   data:
     default:
       ENGINE: django.db.backends.postgresql_psycopg2
-      NAME: tmp_04
+      NAME: $DATABASE_NAME
       USER: $DATABASE_USER
       PASSWORD: $DATABASE_PASSWORD
-      HOST: 172.26.160.3
+      HOST: $DATABASE_HOST
   container:
     env:
+      - name: DATABASE_NAME
+        valueFrom:
+          secretKeyRef:
+            name: database-auth
+            key: dbname
       - name: DATABASE_USER
         valueFrom:
           secretKeyRef:
-            name: postgresql-auth
+            name: database-auth
             key: user
       - name: DATABASE_PASSWORD
         valueFrom:
           secretKeyRef:
-            name: postgresql-auth
+            name: database-auth
             key: password
+      - name: DATABASE_HOST
+        valueFrom:
+          secretKeyRef:
+            name: database-auth
+            key: host
